Models, repositories e incio do login API

--- a/API/LitteraAPI/appsettings.json
+++ b/API/LitteraAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "SqlServer": "Server=LAPTOP-0BENMO3O\\SQLEXPRESS;Database=Alunos;Integrated Security=true;TrustServerCertificate=True;"
+
+  }
 }
