--- a/API/LitteraAPI/appsettings.json
+++ b/API/LitteraAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SqlServer": "Server=LAPTOP-0BENMO3O\\SQLEXPRESS;Database=Alunos;Integrated Security=true;TrustServerCertificate=True;"
+    "SqlServer": "Server=LAPTOP-0BENMO3O\\SQLEXPRESS;Database=Littera;Integrated Security=true;TrustServerCertificate=True;"
 
   }
 }
