--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --arm64"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "lucide-react": "^0.511.0",
     "os-utils": "^0.0.14",
     "react": "^19.0.0",
