--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.12.2",
     "lucide-react": "^0.511.0",
     "os-utils": "^0.0.14",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4"
