--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
