Adicionando API na pasta /API

--- a/API/LitteraAPI/appsettings.json
+++ b/API/LitteraAPI/appsettings.json
@@ -8,7 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SqlServer": "Server=LAPTOP-0BENMO3O\\SQLEXPRESS;Database=Littera;Integrated Security=true;TrustServerCertificate=True;"
-
+    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=Littera;User Id=sa;Password=etesp123;TrustServerCertificate=True;"
   }
 }
